...
    modifier: Modifier = Modifier,
    navigateToDetail: (Long) -> Unit,
) {
    LazyColumn(
        contentPadding = PaddingValues(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("RewardList")
    ) {
        items(orderHandphone) { data ->
            HandphoneItem(
                image = data.handphone.image,
                title = data.handphone.name,
                price = data.handphone.price,
...
